syntax = "proto2";

option java_package = "com.fictional.test";
option java_outer_classname = "Fields1Proto";

message ScalarFields {
	optional bool boolean_field = 1;
	optional double double_field = 2;
	optional fixed32 fixed32_field = 3;
	optional fixed64 fixed64_field = 4;
	optional float float_field = 5;
	optional int32 int32_field = 6;
	optional int64 int64_field = 7;
	optional sfixed32 sfixed32_field = 8;
	optional sfixed64 sfixed64_field = 9;
	optional sint32 sint32_field = 10;
	optional sint64 sint64_field = 11;
	optional uint32 uint32_field = 12;
	optional uint64 uint64_field = 13;

	optional string string_field = 14;
	optional bytes bytes_field = 15;
}

message ScalarAndEnumFields {
	optional bool boolean_field = 1;
	optional double double_field = 2;
	optional fixed32 fixed32_field = 3;
	optional fixed64 fixed64_field = 4;
	optional float float_field = 5;
	optional int32 int32_field = 6;
	optional int64 int64_field = 7;
	optional sfixed32 sfixed32_field = 8;
	optional sfixed64 sfixed64_field = 9;
	optional sint32 sint32_field = 10;
	optional sint64 sint64_field = 11;
	optional uint32 uint32_field = 12;
	optional uint64 uint64_field = 13;

	optional string string_field = 14;
	optional bytes bytes_field = 15;

	optional EnumField1 enum_field = 16;
}

message ScalarEnumMessageFields {
	optional bool boolean_field = 1;
	optional double double_field = 2;
	optional fixed32 fixed32_field = 3;
	optional fixed64 fixed64_field = 4;
	optional float float_field = 5;
	optional int32 int32_field = 6;
	optional int64 int64_field = 7;
	optional sfixed32 sfixed32_field = 8;
	optional sfixed64 sfixed64_field = 9;
	optional sint32 sint32_field = 10;
	optional sint64 sint64_field = 11;
	optional uint32 uint32_field = 12;
	optional uint64 uint64_field = 13;

	optional string string_field = 14;
	optional bytes bytes_field = 15;

	optional EnumField1 enum_field = 16;

	optional ScalarEnumMessageFields message_field = 17;
}

enum EnumField1 {
	ONE = 0;
	TWO = 1;
	THREE = 2;
}
