package ognl.test.proto;

option java_package = "com.fictional.test";
option java_outer_classname = "MessageWithBytes1Proto";

message MessageWithBytes1 {
	required bytes bytes = 1;
}

